// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thesauri routes DELETE should have a validation schema 1`] = `
Object {
  "children": Object {
    "_id": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "_rev": Object {
      "type": "any",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`thesauri routes GET dictionaries should have a validation schema 1`] = `
Object {
  "children": Object {
    "_id": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`thesauri routes GET should have a validation schema 1`] = `
Object {
  "children": Object {
    "_id": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`thesauri routes POST should have a validation schema 1`] = `
Object {
  "alternatives": Array [
    Object {
      "children": Object {
        "__v": Object {
          "invalids": Array [
            Infinity,
            -Infinity,
          ],
          "type": "number",
        },
        "_id": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "enable_classification": Object {
          "falsy": Array [
            false,
          ],
          "flags": Object {
            "insensitive": true,
          },
          "truthy": Array [
            true,
          ],
          "type": "boolean",
        },
        "name": Object {
          "flags": Object {
            "presence": "required",
          },
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "values": Object {
          "flags": Object {
            "presence": "required",
            "sparse": false,
          },
          "items": Array [
            Object {
              "children": Object {
                "_id": Object {
                  "invalids": Array [
                    "",
                  ],
                  "type": "string",
                },
                "id": Object {
                  "invalids": Array [
                    "",
                  ],
                  "type": "string",
                },
                "label": Object {
                  "flags": Object {
                    "presence": "required",
                  },
                  "invalids": Array [
                    "",
                  ],
                  "type": "string",
                },
                "values": Object {
                  "flags": Object {
                    "sparse": false,
                  },
                  "type": "array",
                },
              },
              "type": "object",
            },
          ],
          "type": "array",
        },
      },
      "flags": Object {
        "presence": "required",
      },
      "type": "object",
    },
    Object {
      "children": Object {
        "thesauri": Object {
          "flags": Object {
            "presence": "required",
          },
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      },
      "flags": Object {
        "presence": "required",
      },
      "type": "object",
    },
  ],
  "flags": Object {
    "presence": "required",
  },
  "type": "alternatives",
}
`;
